:art: updated illustration

--- a/demo_website/index.html
+++ b/demo_website/index.html
@@ -120,7 +120,7 @@
                 <div class="col-lg-5">
                     <div class="text-container">
                         <div class="section-title">INTRO</div>
-                        <h2>On à aussi une très belle balançoire</h2>
+                        <h2>On a aussi une très belle balançoire</h2>
                         <p>Seul dans une lac, même avec les plus beaux cailloux, l'ennui arrive vite.</p>
                         <p class="testimonial-text">"Notre volonté est d'égayer votre quotidien avec ce que notre departement Recherche et Dévelopement à trouvé de mieux: une belle planche, et hop, une balançiore !"</p>
                         <div class="testimonial-author">George-Louise Donovan - CEO</div>
